packages/webassemblyjs/test/fixtures/type-errors/operand-if-missing-in-if/module.wast
(module (func $type-if-operand-missing-in-if
	(i32.const 0) (i32.const 0)
	(if (then (if (then))))
))
